--- a/catalogo/catalogo/templates/home/contacto.html
+++ b/catalogo/catalogo/templates/home/contacto.html
@@ -1,4 +1,3 @@
-
 {% extends 'base.html' %}
 
 {% block title %}
@@ -6,37 +5,18 @@
 {% endblock %}
 
 {% block content %}
-		<form action="." method = "POST">
-			{% csrf_token %}
-			{{form.as_p}}
-			<input type  = "submit" value= "submit">
-
-		</form>
+	{% if info_enviado %}
+		<h2>gracias por enviar un comentario, nos podremos en contacto</h2>
+		<br>
+		<h3>la informacion enviada fue la siguiente</h3>
+		<p>Email usado: {{email}} </p>
+		<p>titulo usado: {{title}} </p>
+		<p>texto citado: </p> <br> {{text}}
+	{% else %}	
+	<form action="." method = "POST"> 
+		{% csrf_token %}
+		{{ form.as_p}}
+		<input class="btn btn-success" type = "submit" value = "submit"/> 
+	</form>	
+	{% endif %}
 {% endblock %}
-
-	
-	<!---<!DOCTYPE HTML>
-	<html>
-	<head>
-		<title>Contactanos</title>
-	</head>
-	<body>
-		{% if info_enviado %}
-			<h2> Gracias  por enviar un comentario, nos ponemos en contacto</h2>
-			<br>
-			<h3>la informacion enviada fue la siguiente: </h3>
-			<p> Email usado: {{ email }} </P>
-			<p> Titulo usado: {{title}} </p>
-			<p> Texto citado: </P> <br> {{text}}
-		{% else %}
-		<form action= "." method = "POST">
-			{% csrf_token %}
-			{{form.as_p}}
-			<input type = "submit" value = "enviar"/>
-		</form>
-		{% endif %}
-
-
-	
-	</body>
-	</html>-->
