--- a/catalogo/catalogo/templates/home/index.html
+++ b/catalogo/catalogo/templates/home/index.html
@@ -1,12 +1,9 @@
-{%  extends 'base.html' %}
+{% extends 'base.html' %}
 
-{%  block title %}
-	inicio- Bienvenidos
+{% block title %}
+	inicio - Bienvenidos
 {% endblock %}
 
 {% block content %}
-	<h1> Bienvenidos esta es la pagina Principal</h1>
-	{% if user.get_profile.telefono %}
-		<p>Numero Telefonico :  {{ user.get_profile.telefono }}</p>
-	{% endif %}
-{% endblock%}
+	<H1>Bienvenidos esta es la pagina principal</H1>
+{% endblock %}
