--- a/catalogo/catalogo/templates/home/login.html
+++ b/catalogo/catalogo/templates/home/login.html
@@ -1,12 +1,15 @@
 {% extends 'base.html' %}
+
 {% block title %}
 	Login
 {% endblock %}
+
+
 {% block content %}
-	<form action = "." method = "POST" align = "center">
+	<form action="." method="POST" align="center">
 		{% csrf_token %}
 		{{mensaje}}
 		{{form.as_p}}
-		<input type = "submit" value = "login"/>
+		<input class="btn btn-success" type="submit" value="login"/>
 	</form>
-{% endblock %} 
+{% endblock %}
