--- a/catalogo/catalogo/templates/home/productos.html
+++ b/catalogo/catalogo/templates/home/productos.html
@@ -1,66 +1,68 @@
 {% extends 'base.html' %}
-
 {% block title %}
-	Lista de  Productos
+	CRUD Productos
 {% endblock %}
 
 {% block content %}
-	<h1>Lista de productos</h1>
+	<h1>Lista de Productos</h1>
 	<br>
 	{% if user.is_authenticated %}
-		<a class = "btn btn-success" href="{% url 'vista_agregar_producto'%}"><li class = "icon-plus"></li>Agregar nuevo producto</a>
+	<a class="btn btn-primary" href="{% url 'vista_agregar_producto' %}"><li class="icon-plus"></li> Agregar un nuevo producto</a>
 	{% endif %}
 	{% if productos %}
-	<table class = "table table-hover">
+	<table class="table table-hover">
 		<theader>
 			<tr>
-				<th>Producto</th>
+				<th>Productos</th>
 				<th>Precio</th>
 				<th>Stock</th>
 			</tr>
 		</theader>
+	
 		{% for p in productos %}
 			<tbody>
 				<tr>
-					<td>{{ p.nombre }}</td>
-					<td>{{ p.precio }}</td>
-					<td>{{ p.stock }}</td>
-					<td><a class = "btn" href="/producto/{{p.id}}"><li class= "icon-search"></li>Ver</a></td>
-					<td><a class = "btn" href="#"><li class = "icon-shopping-cart"></li>Comprar</a></td>
-					<td>
-						{% if user.is_authenticated %}
-							<a class = "btn" href="/edit/producto/{{p.id}}"><li class = "icon-pencil"></li> Editar</a>
-							<a class = "btn" href="/del/producto/{{p.id}}"><li class = "icon-trash"></li>Eliminar</a>
-						{% endif%}
-					</td>
+				<td>{{ p.nombre }}</td>
+				<td>{{ p.precio }}</td>
+				<td>{{ p.stock }}</td>
+				<td><a class="btn" href="/producto/{{p.id}}"><li class="icon-search"></li> Ver </a></td>
+				<td><a class="btn" href="#"><li class="icon-shopping-cart"></li>Comprar</a></td>
+				<td>
+				{% if user.is_authenticated%}
+				<a class="btn" href="/edit/producto/{{ p.id }}"><li class="icon icon-pencil"></li> Editar </a>
+				{% endif %}
+				</td>
 				</tr>
 			</tbody>
-		{% endfor %}
-	</table>
+		{% endfor %}		
+	</table>				
+				
+			</p>	
 	{% else %}
 		<h2>No existen productos activos a la venta :( </h2>
 	{% endif %}
 	{% if productos %}
-	<div class = "pagination">
-		<div class = "pagination pagination-centered">
+	<div class="pagination">
+		<div class="pagination pagination-centered">
 			<ul>
-				<li><a href="/productos/page/1"><<</a></li>
-				{% if productos.has_previous%}
-				<li><a href="/productos/page/{{ productos.previous_page_number }}">Anterior</a></li>
+				<li><a href="/productos/page/1"> << </a></li>
+				{% if productos.has_previous %}
+					<li><a href="/productos/page/{{ productos.previous_page_number }}"> Anterior </a></li>
 				{% else %}
-					<li><a href="#">Anterior</a></li>
+					<li><a href="">Anterior</a></li>
 				{% endif %}
 
 				{% if productos.has_next %}
-					<li><a href="/productos/page/{{ productos.next_page_number }}">Siguiente</a></li>
+					<li><a href="/productos/page/{{ productos.next_page_number }}"> Siguiente </a></li>
 				{% else %}
-					<li><a href="#">Siguiente</a></li>
+					<li><a href="">Siguiente</a></li>
 				{% endif %}
-					<li><a href="/productos/page/{{ productos.paginator.num_pages }}">>></a></li>
+				
+				<li><a href="/productos/page/{{ productos.paginator.num_pages }}"> >> </a></li>
 			</ul>
 		</div>
 	</div>
-			<br>
-			<h4>Pagina {{ productos.number }} de {{ productos.paginator.num_pages }}</h4>
+	<br>
+	<h4>Pagina {{ productos.number }} de {{ productos.paginator.num_pages }}</h4>
 	{% endif %}
 {% endblock %}
