--- a/catalogo/catalogo/templates/home/register.html
+++ b/catalogo/catalogo/templates/home/register.html
@@ -1,11 +1,11 @@
-{% extends "base.html" %}
-{% block title%}
-	Registro
-{% endblock %}
+{% extends 'base.html' %}
+{% block title %}Registro{% endblock %}
 {% block content %}
-	<form action = "." method="POST">
-		{% csrf_token %}
-		{{ form.as_p}}
-		<button class = "btn btn-primary" type= "submit ">Registrar</button>
-	</form>		
+<form action="." method="POST">
+
+	{% csrf_token %}
+	{{ form.as_p }}
+	<button class="btn btn-primary" type="submit">Registrar</button>
+</form>
+
 {% endblock %}
