--- a/catalogo/catalogo/templates/home/thanks_register.html
+++ b/catalogo/catalogo/templates/home/thanks_register.html
@@ -1,8 +1,6 @@
-{% extends "base.html" %}
-{% block title%}
-	Registro
-{% endblock %}
+{% extends 'base.html' %}
+{% block title %}Registro{% endblock %}
 {% block content %}
-	<h2>Gracias por registrarte!!</h2>
-	<a href="/login" class = "btn btn-primary">Iniciar Sesion</a>		
+	<h2>Gracias Por Registrarte</h2>
+	<a href="/login/" class="btn btn-primary">Iniciar Sesion</a>
 {% endblock %}
