--- a/catalogo/templates/base.html
+++ b/catalogo/templates/base.html
@@ -56,7 +56,7 @@
 			 				<p><b>Direccion:</b> Cra 3 N 5 - 50</p>
 			 				<p><b>Telefono:</b> 8112121</p>
 			 				<p>3215696013 - 8235690 </p>
-			 				<p>Popayork - Cauca</p>
+			 				<p>Popayan- Cauca</p>
 			 			</div>
 			 			<div align="center">
 			 				<img src="/media/images/django.gif">
